[FIX] TinyMCE Scrollbar

--- a/plugin/tinymce/template/admin.css
+++ b/plugin/tinymce/template/admin.css
@@ -1,4 +1,3 @@
 .tox-tinymce{
     margin: 20px 0px;
-    max-height: 1000px;
 }
